erDiagram
    rol ||--o{ usuario : "clasifica"
    usuario ||--|| credencial : "tiene"
    usuario ||--o{ historial_contrasena : "registra"
    usuario ||--o| usuario_2fa : "configura"
    usuario ||--o{ token_recuperacion : "solicita"
    usuario ||--o{ lote_recuperacion : "posee"
    lote_recuperacion ||--o{ codigo_recuperacion_archivo : "contiene"
    usuario ||--o{ sesion_usuario : "abre"
    usuario ||--o{ auditoria : "genera"
    usuario ||--o| deportista : "es (subtipo)"
    usuario ||--o{ asignacion_entrenador : "entrena"
    deportista ||--o{ asignacion_entrenador : "es entrenado"
    deportista ||--o{ sesion_entrenamiento : "realiza"
    dispositivo ||--o{ sesion_entrenamiento : "captura"
    dispositivo ||--o{ sensor : "monta"
    tipo_sensor ||--o{ sensor : "tipifica"
    sesion_entrenamiento ||--o{ lectura_ecg : "produce"
    sesion_entrenamiento ||--o{ lectura_gps : "produce"
    sesion_entrenamiento ||--o{ lectura_imu : "produce"
    sesion_entrenamiento ||--|| metrica_sesion : "resume"
    sesion_entrenamiento ||--o{ alerta : "dispara"
    deportista ||--o{ umbral_heuristico : "personaliza"
